update postgre config
